Archive2/33/eb99017a3a2575/output
main.cpp: In function 'int main()':
main.cpp:6:1: error: expected ';' before 'getchar'
 getchar();
 ^
