Archive2/33/eb99017a3a2575/main.cpp
#include <iostream>
using namespace std;
int main()
{
cout<<"hi"
getchar();
getchar();
return 0;
}